--- a/.changelog/v3.0.0.0.preview.3.0.md
+++ b/.changelog/v3.0.0.0.preview.3.0.md
@@ -1,4 +1,21 @@
 > 对应核心版本: [v3.0.0.preview.8.0](https://github.com/ForteScarlet/simpler-robot/releases/tag/v3.0.0.preview.8.0)
 
+## 跟进核心版本
+依赖的simbot核心版本更新到 [v3.0.0.preview.8.0](https://github.com/ForteScarlet/simpler-robot/releases/tag/v3.0.0.preview.8.0)，
+根据变化调整实现。
+
+⚠ 警告：注意：这是不兼容变更。
+
+
+## 组件下消息实现重命名
+调整所有的组件消息为`Tcg`开头。具体变更内容：
+- `Ark` -> `TcgArk`
+- `AttachmentMessage` -> `TcgAttachmentMessage`
+- `MentionChannel` -> `TcgMentionChannel`
+- `ReplyTo` -> `TcgReplyTo`
+
+并为它们提供一个统一的接口类型 `TcgMessageElement`。
+
+
 
 ## 更新日志
