:bookmark: 发布版本 v3.0.0.0.preview.3.0

--- a/.changelog/v3.0.0.0.preview.3.0.md
+++ b/.changelog/v3.0.0.0.preview.3.0.md
@@ -16,6 +16,8 @@
 
 并为它们提供一个统一的接口类型 `TcgMessageElement`。
 
+## 注意事项
+simbot `v3.0.0.preview.8.0` 为 `Member` 同意实现了 `SendSupport`, 但是目前腾讯频道组件尚不支持私聊，因此 `Member.send(...)` api暂不可用。
 
 
 ## 更新日志
