--- a/.changelog/v3.0.0.0.preview.3.0.md
+++ b/.changelog/v3.0.0.0.preview.3.0.md
@@ -4,7 +4,7 @@
 依赖的simbot核心版本更新到 [v3.0.0.preview.8.0](https://github.com/ForteScarlet/simpler-robot/releases/tag/v3.0.0.preview.8.0)，
 根据变化调整实现。
 
-⚠ 警告：注意：这是不兼容变更。
+⚠ 警告：这是不兼容变更。
 
 
 ## 组件下消息实现重命名
